# fillWord-qt

./: README.md
isupov_g_s/: CMakeLists.txt
isupov_g_s/prj.cw/: CMakeLists.txt  Doxyfile
isupov_g_s/prj.cw/fillWord/: CMakeLists.txt  cellButton.cpp  fillWord.cpp  label.cpp  resources.qrc  swipeHandler.cpp  wordsGenerator.cpp
isupov_g_s/prj.cw/fillWord/include/fillWord/: cellButton.hpp  fillWord.hpp  label.hpp  swipeHandler.hpp  wordsGenerator.hpp
isupov_g_s/prj.cw/fillWord/res/: words.txt
isupov_g_s/prj.cw/fillWord/style/: app.qss
isupov_g_s/prj.cw/pointsMatrixGeneration/: CMakeLists.txt  point.cpp  pointsMatrixGeneration.cpp  snakeAlgorithm.cpp
isupov_g_s/prj.cw/pointsMatrixGeneration/include/pointsMatrixGeneration/: difficulty.hpp  direction.hpp  point.hpp  pointsMatrixGeneration.hpp  snakeAlgorithm.hpp
isupov_g_s/prj.lab/: CMakeLists.txt
isupov_g_s/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
isupov_g_s/prj.lab/arrayd/include/arrayd/: arrayd.hpp
isupov_g_s/prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp
isupov_g_s/prj.lab/arrayt/include/arrayt/: arrayt.hpp
isupov_g_s/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
isupov_g_s/prj.lab/matrixs/include/matrixs/: matrixs.hpp
isupov_g_s/prj.lab/orto/: orto.20230519  orto.cpp  orto.txt
isupov_g_s/prj.lab/rational/: CMakeLists.txt  rational.cpp
isupov_g_s/prj.lab/rational/include/rational/: rational.hpp
isupov_g_s/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  fillWord.cpp  matrixs_test.cpp  rational_doctest.cpp  rational_test.cpp
